--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec7138e
-	base = 13738a6
+	base = f0d33e1
 	trim = rosidl_generator_dds_idl
-	trimbase = 
+	trimbase = 13738a6
